Force media bodies to be display block (required to stop lines wrapping under media images)

--- a/_objects.media.scss
+++ b/_objects.media.scss
@@ -43,6 +43,7 @@ $inuit-media-collapse-at:           720px !default;
     .#{$inuit-namespace}media__body,
     %#{$inuit-namespace}media__body {
         overflow: hidden;
+        display: block;
 
         &,
         > :last-child {
